# backupWise-rust-version

./: .gitignore  Cargo.toml  README.md  backup_log.json  config.json  readme.md
file_logs/: _home_franklyn_Documentos_Códigos_Documento sem título 2.json  _home_franklyn_Documentos_Códigos_Documento sem título 3.json  _home_franklyn_Documentos_Códigos_Documento sem título.json  _home_franklyn_Documentos_Códigos_as mudnças.json  _home_franklyn_Documentos_Códigos_mais o que .json  _home_franklyn_Documentos_Códigos_maus uma muança.json  _home_franklyn_Documentos_Códigos_mnudanças.json  _home_franklyn_Documentos_Códigos_mo.json  _home_franklyn_Documentos_Códigos_mudança de planos.json  _home_franklyn_Documentos_Códigos_mudanças para driver.json  _home_franklyn_Documentos_Códigos_teremos que mudar tudo de novo.json  _home_franklyn_Documentos_Códigos_um pouco de tudo.json
src/: auth.rs  backup.rs  config.rs  cron.rs  driver_integration.rs  lib.rs  logger.rs  main.rs  monitor.rs  notification.rs  persistence.rs  schedule.rs  select.rs
