[package]
name = "backupwise_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "5.0"
notify-rust = "4.6"
cron = "0.10"
chrono = "0.4"
dialoguer = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yup-oauth2 = "11.0.0"
google-drive3 = "6.0.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.5.0", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.10", features = ["full"] }
mime_guess = "2.0"
